align event titles along leftside of bubble to prevent cutoff on left

--- a/src/app/styles/calendar.module.css
+++ b/src/app/styles/calendar.module.css
@@ -24,14 +24,14 @@
 
 .eventBubbleContent {
   width: 100px;
-  height: 25px;
+  height: 28px;
   overflow: hidden;
   background-color: #c4f1de;
   border-radius: 1em;
   padding: 5%;
-  padding-right: 25%;
+  padding-right: 5%;
   display: flex;
-  justify-content: center;
+  justify-content: left;
   align-items: center;
   box-sizing: border-box;
   font-family: Sans-serif;
